// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VIcon for component icon should render an svg icon 1`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     viewbox="0 0 24 24"
     height="24"
     width="24"
     role="img"
     aria-hidden="true"
     class="v-icon notranslate v-icon--svg theme--light"
>
  <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z">
  </path>
</svg>
`;

exports[`VIcon for component icon should render an svg icon 2`] = `
<svg xmlns="http://www.w3.org/2000/svg"
     viewbox="0 0 24 24"
     height="36px"
     width="36px"
     role="img"
     aria-hidden="true"
     class="v-icon notranslate v-icon--svg theme--light"
     style="font-size: 36px; height: 36px; width: 36px;"
>
  <path d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z">
  </path>
</svg>
`;

exports[`VIcon for component icon should render component 1`] = `
<div class="v-icon notranslate test-component v-icon--is-component theme--light"
     aria-hidden="true"
>
  test icon
</div>
`;

exports[`VIcon for component icon should set font size from helper prop 1`] = `
<div class="v-icon notranslate test-component v-icon--is-component theme--light"
     aria-hidden="true"
     style="font-size: 16px; height: 16px;"
>
  test icon
</div>
`;

exports[`VIcon for component icon should set font size from helper prop 2`] = `
<div class="v-icon notranslate test-component v-icon--is-component theme--light"
     aria-hidden="true"
>
  test icon
</div>
`;

exports[`VIcon for component icon should set font size from helper prop 3`] = `
<div class="v-icon notranslate test-component v-icon--is-component theme--light"
     aria-hidden="true"
     style="font-size: 36px; height: 36px;"
>
  test icon
</div>
`;

exports[`VIcon for component icon should set font size from helper prop 4`] = `
<div class="v-icon notranslate test-component v-icon--is-component theme--light"
     aria-hidden="true"
     style="font-size: 40px; height: 40px;"
>
  test icon
</div>
`;

exports[`VIcon set font size from helper prop 1`] = `
<i aria-hidden="true"
   class="v-icon notranslate material-icons theme--light"
   style="font-size: 16px;"
>
  add
</i>
`;

exports[`VIcon set font size from helper prop 2`] = `
<i aria-hidden="true"
   class="v-icon notranslate material-icons theme--light"
>
  add
</i>
`;

exports[`VIcon set font size from helper prop 3`] = `
<i aria-hidden="true"
   class="v-icon notranslate material-icons theme--light"
   style="font-size: 36px;"
>
  add
</i>
`;

exports[`VIcon set font size from helper prop 4`] = `
<i aria-hidden="true"
   class="v-icon notranslate material-icons theme--light"
   style="font-size: 40px;"
>
  add
</i>
`;
